@startuml

title __SETTINGSSCREENS's Class Diagram__\n

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.screens {
      package com.madrat.spaceshooter.screens.settingsscreens {
        class AboutScreen {
            - stage : Stage
            - skin : Skin
            - menuTable : Table
            - batch : SpriteBatch
            - devNameLabel : Label
            - infoLabel : Label
            - backBtn : TextButton
            - nameColor : Color
            - strColor : Color
            + AboutScreen()
            + setSettingsScreen()
            + show()
            + render()
            + resize()
            + pause()
            + resume()
            + hide()
            + dispose()
        }
      }
    }
  }
  

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.screens {
      package com.madrat.spaceshooter.screens.settingsscreens {
        class GlobalScoreBoardScreen {
            - stage : Stage
            - skin : Skin
            - menuTable : Table
            - batch : SpriteBatch
            - scoreBoardLabel : Label
            - currentUser : Label
            - backBtn : TextButton
            - isDataFetched : boolean
            - isDisposed : boolean
            - fetchScoreboard : Thread
            - users : List<User>
            - clientLocalUUID : String
            + GlobalScoreBoardScreen()
            + setSettingsScreen()
            + show()
            + render()
            + resize()
            + pause()
            + resume()
            + hide()
            + dispose()
        }
      }
    }
  }
  

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.screens {
      package com.madrat.spaceshooter.screens.settingsscreens {
        class SettingsScreen {
            - batch : SpriteBatch
            - resetProgressBtn : TextButton
            - aboutBtn : TextButton
            - statsBtn : TextButton
            - globalScoreBoarBtn : TextButton
            - backBtn : TextButton
            - stage : Stage
            - skin : Skin
            - buttonsTable : Table
            + SettingsScreen()
            + setPreviousScreen()
            - setDefaultValues()
            + show()
            + render()
            + resize()
            + pause()
            + resume()
            + hide()
            + dispose()
        }
      }
    }
  }
  

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.screens {
      package com.madrat.spaceshooter.screens.settingsscreens {
        class StatsScreen {
            - batch : SpriteBatch
            - backBtn : TextButton
            - defaultFont : BitmapFont
            - killedEnemiesLabel : Label
            - destroyedAsteroidsLabel : Label
            - totalEarnedMoneysLabel : Label
            - totalDeathsLabel : Label
            - healPickedUpLabel : Label
            - ammoPickedUpLabel : Label
            - shieldPickedUpLabel : Label
            - stage : Stage
            - skin : Skin
            - buttonsTable : Table
            + StatsScreen()
            + setPreviousScreen()
            - getStatsDataJson()
            + show()
            + render()
            + resize()
            + pause()
            + resume()
            + hide()
            + dispose()
        }
      }
    }
  }
  

  AboutScreen -up-|> Screen
  AboutScreen o-- MainGame : game
  AboutScreen o-- ScrollingBackground : scrollingBackground
  GlobalScoreBoardScreen -up-|> Screen
  GlobalScoreBoardScreen o-- MainGame : game
  GlobalScoreBoardScreen o-- ScrollingBackground : scrollingBackground
  GlobalScoreBoardScreen o-- DialogAlert : error
  SettingsScreen -up-|> Screen
  SettingsScreen o-- MainGame : game
  SettingsScreen o-- ScrollingBackground : scrollingBackground
  SettingsScreen o-- DialogAlert : confirmDialog
  SettingsScreen o-- CheckBox : checkBox
  StatsScreen -up-|> Screen
  StatsScreen o-- MainGame : game
  StatsScreen o-- ScrollingBackground : scrollingBackground


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
